# collections

./: .gitignore  README.md
assembly/: hello.s  run.sh
c/: getopt.c
c++/c++11/: shared_ptr.cpp
c/gcov/: readme  run.sh
c/getopt/: getopt.c  run.sh
c/pthread/: pthread_key.c  run.sh
cpp/bazel/: readme.md
cpp/c++11/: atomic.cpp  type.cpp  unique_ptr.cpp  weak_ptr.cpp
cpp/c++14/: constexpr.cpp  generic_lambdas.cpp  return_type_dedute.cpp  variable_template.cpp
cpp/ccls/: .gitignore  CMakeLists.txt  ccls.py  main.cpp  readme.md
cpp/ccls/a/: a.cpp  a.hpp
cpp/ccls/b/: b.cpp  b.hpp
cpp/ccls/c/: CMakeLists.txt  c.cpp  c.hpp
cpp/vcpkg/: CMakeLists.txt  CMakeUserPresets.json  main.cpp  readme.md
experiment/: branch_prediction.cpp
fe/basic/: index.html  readme  script.js  style.css
fe/case/: readme  simple.html  分页效果.html  常见标签.html  常见样式.html  盒子模型.html
fe/component/: index.html
fe/homepage/: index.html  style.css
fe/vue/: readme  sfc.vue
golang/: .gitignore  channel.go  context.go  debug.go  generic_type.go  logging.go  nethttp.go  reflect.go
golang/ast/: .gitignore  go.mod  main.go
golang/basic/: context.go  nethttp.go  reflect.go
golang/fasthttp/: fasthttp.go  go.mod  index.html
golang/flatbuffers/: go.mod  main.go  message.fbs
golang/grpc/: go.mod  helloworld.proto  main.go
golang/logging/: go.mod  logging.go
k8s/: Dockerfile  deployment.yaml  ingress.yaml  main.go  readme.md  run.sh
linux/: bind_cpu.c  du.c  get_host_ip.c  run.sh
python/: course.py  line_and_chart.py  playwright_test.py
shell/: bash.sh  demo.sh
(+64 files in other folders)
